--- a/clique-ui/package.json
+++ b/clique-ui/package.json
@@ -5,6 +5,7 @@
     "apollo-boost": "^0.1.20",
     "downshift": "^3.1.4",
     "emotion": "^9.2.12",
+    "formik": "^1.3.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "lodash.times": "^4.3.2",
@@ -13,7 +14,8 @@
     "react-dom": "^16.7.0-alpha.0",
     "react-emotion": "^9.2.12",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "yup": "^0.26.6"
   },
   "scripts": {
     "start": "react-scripts start",
