--- a/clique-ui/package.json
+++ b/clique-ui/package.json
@@ -1,7 +1,9 @@
 {
   "name": "happyhour-ui",
   "version": "0.1.0",
+  "proxy": "http://localhost:3020/",
   "dependencies": {
+    "@cliquelabs/types": "^0.0.2",
     "apollo-boost": "^0.1.20",
     "downshift": "^3.1.4",
     "emotion": "^9.2.12",
@@ -15,6 +17,7 @@
     "react-emotion": "^9.2.12",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-use": "^4.8.0",
     "yup": "^0.26.6"
   },
   "scripts": {
