--- a/clique-users/package.json
+++ b/clique-users/package.json
@@ -4,13 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@cliquelabs/types": "^0.0.1",
+    "@cliquelabs/types": "^0.0.2",
+    "@workpop/graphql-metrics": "^0.4.0",
     "apollo-server-express": "^2.1.0",
     "bcrypt": "^3.0.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
+    "influx": "^5.0.7",
     "jsonwebtoken": "^8.3.0",
+    "log4js": "^3.0.6",
     "prisma-client-lib": "^1.19.3"
   },
   "devDependencies": {
