--- a/clique-core/package.json
+++ b/clique-core/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@cliquelabs/types": "^0.0.2",
     "@workpop/graphql-metrics": "^0.4.0",
     "apollo-server-express": "^2.1.0",
     "express": "^4.16.4",
     "fb": "^2.0.0",
     "graphql": "^14.0.2",
     "influx": "^5.0.7",
+    "log4js": "^3.0.6",
     "yelp-fusion": "^2.2.1"
   },
   "scripts": {
