--- a/clique-types/package.json
+++ b/clique-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cliquelabs/types",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "description": "Central types repo for clique",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -41,14 +41,13 @@
     "generate-schema-json": "ts-node ./generateSchemaJson.ts",
     "generate-service-bindings": "ts-node ./generateServiceBindings.ts",
     "generate-schema-exports": "ts-node ./mergeSchemaExports.ts",
-    "generate-ts": "npm run apollo-cli -- codegen:generate --addTypename --target=typescript --queries=./src/queries/**/*.graphql --schema=./src/queries/schema.json --outputFlat src/typescript",
     "merge-roottypes": "ts-node ./mergeServiceSchemas.ts",
-    "generate-types": "ts-node ./generateTypeDefinitions.ts && npm run generate-ts && npm run prettifyTypeDefs && npm run prettifyQueries && npm run prettifyAllTypes",
+    "generate-types": "ts-node ./generateTypeDefinitions.ts && npm run prettifyTypeDefs && npm run prettifyQueries && npm run prettifyAllTypes",
     "prettifyAllTypes": "prettier --write ./src/typeDefs/**/*.graphql",
     "prettifyTypeDefs": "prettier --write ./src/typeDefinitions.ts",
     "prettifyQueries": "prettier --write ./src/queries/index.ts",
     "build": "rimraf ./lib && tsc --project tsconfig.json && cp ./src/queries/schema.json ./lib/queries/",
-    "prepareGraphQL": "npm run generate-types && npm run generate-schema-exports && npm run merge-roottypes && npm run generate-schema-json && npm run generate-ts && npm run lint:graphql && npm run generate-service-bindings",
+    "prepareGraphQL": "npm run generate-types && npm run generate-schema-exports && npm run merge-roottypes && npm run generate-schema-json && npm run lint:graphql && npm run generate-service-bindings",
     "prepare": "npm run prepareGraphQL && npm run build",
     "release": "standard-version"
   },
