--- a/clique-core/package.json
+++ b/clique-core/package.json
@@ -12,6 +12,7 @@
     "graphql": "^14.0.2",
     "influx": "^5.0.7",
     "log4js": "^3.0.6",
+    "prisma-client-lib": "^1.19.3",
     "yelp-fusion": "^2.2.1"
   },
   "scripts": {
