--- a/clique-types/package.json
+++ b/clique-types/package.json
@@ -32,22 +32,20 @@
     "shelljs": "^0.8.2",
     "standard-version": "^4.4.0",
     "ts-node": "^7.0.1",
+    "graphql-central-types": "^0.0.8",
     "typescript": "^3.1.3"
   },
   "scripts": {
+    "types": "ts-node types-cli",
     "apollo-cli": "apollo",
     "lint:graphql": "eslint src/queries --ext .graphql",
     "mock-server": "ts-node ./MockServer",
-    "generate-schema-json": "ts-node ./generateSchemaJson.ts",
-    "generate-service-bindings": "ts-node ./generateServiceBindings.ts",
-    "generate-schema-exports": "ts-node ./mergeSchemaExports.ts",
-    "merge-roottypes": "ts-node ./mergeServiceSchemas.ts",
-    "generate-types": "ts-node ./generateTypeDefinitions.ts && npm run prettifyTypeDefs && npm run prettifyQueries && npm run prettifyAllTypes",
+    "generate-types": "npm run types exportTypeDefs && npm run prettifyTypeDefs && npm run prettifyQueries && npm run prettifyAllTypes",
     "prettifyAllTypes": "prettier --write ./src/typeDefs/**/*.graphql",
     "prettifyTypeDefs": "prettier --write ./src/typeDefinitions.ts",
     "prettifyQueries": "prettier --write ./src/queries/index.ts",
     "build": "rimraf ./lib && tsc --project tsconfig.json && cp ./src/queries/schema.json ./lib/queries/",
-    "prepareGraphQL": "npm run generate-types && npm run generate-schema-exports && npm run merge-roottypes && npm run generate-schema-json && npm run lint:graphql && npm run generate-service-bindings",
+    "prepareGraphQL": "npm run generate-types && npm run types exportSchemas && npm run types mergeSchemas && npm run types generateSchemaJson && npm run lint:graphql && npm run types generateServiceBindings",
     "prepare": "npm run prepareGraphQL && npm run build",
     "release": "standard-version"
   },
