--- a/roxy/package.json
+++ b/roxy/package.json
@@ -12,6 +12,7 @@
     "babel-runtime": "^6.26.0",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
+    "graphql-binding-gateway": "^0.0.1",
     "influx": "^5.0.7",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
