--- a/clique-users/prisma/prisma.yml
+++ b/clique-users/prisma/prisma.yml
@@ -1,4 +1,4 @@
-endpoint: https://us1.prisma.sh/abhi-aiyer-ec90c4/cliqueusers/dev
+endpoint: http://localhost:4466/clique-users/dev
 datamodel: datamodel.prisma
 
 generate:
