--- a/clique-types/package.json
+++ b/clique-types/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "glob": "^7.1.3",
+    "graphql-central-types": "^0.0.13",
     "lodash": "^4.17.11",
     "merge-graphql-schemas": "^1.5.7",
     "mkdirp": "^0.5.1",
@@ -32,7 +33,6 @@
     "shelljs": "^0.8.2",
     "standard-version": "^4.4.0",
     "ts-node": "^7.0.1",
-    "graphql-central-types": "^0.0.8",
     "typescript": "^3.1.3"
   },
   "scripts": {
@@ -54,6 +54,7 @@
     "apollo-link-http": "1.5.5",
     "graphql": "^14.0.2",
     "graphql-binding": "^2.2.5",
+    "graphql-service-binding": "^0.0.4",
     "graphql-tools": "^4.0.1",
     "isomorphic-fetch": "^2.2.1"
   },
