--- a/clique-core/docker-compose.yml
+++ b/clique-core/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
   prisma:
-    image: prismagraphql/prisma:1.20.0
+    image: prismagraphql/prisma:1.19.0
     restart: on-failure
     ports:
-    - "4466:4466"
+      - '4466:4466'
     environment:
       PRISMA_CONFIG: |
         port: 4466
@@ -26,4 +26,4 @@ services:
     volumes:
       - mysql:/var/lib/mysql
 volumes:
-  mysql:
+  ? mysql
