--- a/clique-users/package.json
+++ b/clique-users/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@cliquelabs/types": "^0.0.16",
+    "@cliquelabs/types": "^0.0.17",
     "@workpop/graphql-metrics": "^0.4.0",
     "apollo-server-express": "^2.1.0",
     "bcrypt": "^3.0.2",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-preset-env": "^1.7.0"
   },
   "scripts": {
