--- a/clique-users/package.json
+++ b/clique-users/package.json
@@ -14,7 +14,8 @@
     "influx": "^5.0.7",
     "jsonwebtoken": "^8.3.0",
     "log4js": "^3.0.6",
-    "prisma-client-lib": "^1.19.3"
+    "prisma-client-lib": "^1.19.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
