--- a/clique-ui/package.json
+++ b/clique-ui/package.json
@@ -5,6 +5,12 @@
   "dependencies": {
     "@cliquelabs/types": "^0.0.19",
     "apollo-boost": "^0.1.20",
+    "apollo-cache-inmemory": "^1.3.9",
+    "apollo-client": "^2.4.5",
+    "apollo-fragment-react": "^0.5.1",
+    "apollo-link": "^1.2.3",
+    "apollo-link-http": "^1.5.5",
+    "apollo-link-state-fragment": "^0.1.5",
     "downshift": "^3.1.4",
     "emotion": "^9.2.12",
     "formik": "^1.3.1",
